@@ -5,8 +5,8 @@ type: :bugfix
 component: cadabra
 release: "1.17"
 reporter: Kasper Peeters <kasper.peeters@aei.mpg.de>
-status: :unstarted
-disposition: 
+status: :closed
+disposition: :fixed
 creation_time: 2009-11-14 14:21:52.412089 Z
 references: []
 
@@ -16,3 +16,7 @@ log_events:
   - Kasper Peeters <kasper.peeters@aei.mpg.de>
   - created
   - ""
+- - 2009-12-06 16:10:34.859656 Z
+  - Kasper Peeters <kasper.peeters@aei.mpg.de>
+  - closed with disposition fixed
+  - Fixed in 1.17.
