@@ -119,7 +119,7 @@
     </tr>
   
     <tr>
-      <td>  </td>
+      <td> <img alt="fixed" src="green-check.png" title="fixed"/> </td>
       <td class="littledate">2009-11-14</td>
       <td class="issuename">
         <a href="issue-16b3dc7c2f7508a10da63f93e3407730a757908e.html">Expanding fractional powers fails.</a>
@@ -136,7 +136,7 @@
     </tr>
   
     <tr>
-      <td>  </td>
+      <td> <img alt="fixed" src="green-check.png" title="fixed"/> </td>
       <td class="littledate">2009-11-14</td>
       <td class="issuename">
         <a href="issue-6d586ba4d2e7946ba48f17966355b36375e63b8f.html">Accented tensors fail to print</a>
