@@ -24,11 +24,11 @@
         </td>
         <td>
         
-          <span class='progress-meter'><span class='progress-meter-done'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span class='progress-meter-undone'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
-          14% complete
+          <span class='progress-meter'><span class='progress-meter-done'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span class='progress-meter-undone'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
+          43% complete
           </td>
           </tr><tr><td></td><td>
-          1 / 7 issues.
+          3 / 7 issues.
           <a href="release-1.17.html">See issues &raquo;</a>
         
         </td>
@@ -71,6 +71,24 @@
 
 <table class="log">
   <tbody>
+  
+    <tr class="even-row">
+      <td class="date">2009-12-06</td>
+      <td class="issuename">
+        <a href="issue-16b3dc7c2f7508a10da63f93e3407730a757908e.html">Expanding fractional powers fails.</a> <img class="inline-status-image" alt="fixed" src="green-check.png" title="fixed"/>
+      </td>
+      <td> closed with disposition fixed </td>
+    </tr>
+    <tr><td></td></tr>
+  
+    <tr class="odd-row">
+      <td class="date">2009-12-06</td>
+      <td class="issuename">
+        <a href="issue-6d586ba4d2e7946ba48f17966355b36375e63b8f.html">Accented tensors fail to print</a> <img class="inline-status-image" alt="fixed" src="green-check.png" title="fixed"/>
+      </td>
+      <td> closed with disposition fixed </td>
+    </tr>
+    <tr><td></td></tr>
   
     <tr class="even-row">
       <td class="date">2009-12-02</td>
@@ -138,25 +156,7 @@
     <tr class="odd-row">
       <td class="date">2009-11-14</td>
       <td class="issuename">
-        <a href="issue-16b3dc7c2f7508a10da63f93e3407730a757908e.html">Expanding fractional powers fails.</a> 
-      </td>
-      <td> created </td>
-    </tr>
-    <tr><td></td></tr>
-  
-    <tr class="even-row">
-      <td class="date">2009-11-14</td>
-      <td class="issuename">
-        <a href="issue-6d586ba4d2e7946ba48f17966355b36375e63b8f.html">Accented tensors fail to print</a> 
-      </td>
-      <td> created </td>
-    </tr>
-    <tr><td></td></tr>
-  
-    <tr class="odd-row">
-      <td class="date">2009-09-02</td>
-      <td class="issuename">
-        <a href="issue-9c8f132023a13bdea10ef87e26d37d681705a8d1.html">Derivatives of sums do not always display correctly in notebook</a> 
+        <a href="issue-16b3dc7c2f7508a10da63f93e3407730a757908e.html">Expanding fractional powers fails.</a> <img class="inline-status-image" alt="fixed" src="green-check.png" title="fixed"/>
       </td>
       <td> created </td>
     </tr>
